# Canvas_to_Calendar_Sync

./: .env  .env.example  .gitignore  Canvas_to_Google_MCP_User_TODO.txt  Dockerfile  Dockerfile.disabled  README.md  check_env.py  gcal_smoke.py  list_all_test.py  list_assignments_test.py  list_courses_test.py  plan_count.py  print_tools.py  pyproject.toml  requirements.txt  run_sync_to_google.py  scan_syllabus_test.py  server.py  setup.py  setup_scaffold.py  smithery.yaml  sync_to_google_now.py  test_canvas.py  verify_recent.py
